--- a/001_Pilhas/001_Exercicios.csproj
+++ b/001_Pilhas/001_Exercicios.csproj
@@ -112,6 +112,18 @@
     <Compile Include="Ex26.Designer.cs">
       <DependentUpon>Ex26.cs</DependentUpon>
     </Compile>
+    <Compile Include="Ex26b.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Ex26b.Designer.cs">
+      <DependentUpon>Ex26b.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Ex27.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Ex27.Designer.cs">
+      <DependentUpon>Ex27.cs</DependentUpon>
+    </Compile>
     <Compile Include="Exercicios.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -264,6 +276,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Ex26.resx">
       <DependentUpon>Ex26.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Ex27.resx">
+      <DependentUpon>Ex27.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Exercicios.resx">
       <DependentUpon>Exercicios.cs</DependentUpon>
